# rmf_core

rmf_task_msgs/: CMakeLists.txt
rmf_task_msgs/msg/: Clean.msg
rmf_tasks/: CMakeLists.txt  package.xml
rmf_tasks/include/rmf_tasks/: Task.hpp  TaskFactory.hpp  TaskFactoryPrediction.hpp
rmf_tasks/include/rmf_tasks/tasks/: Delivery.hpp  Loop.hpp  Station.hpp  Task.hpp
rmf_tasks/src/: Task.cpp  abstract.hpp  example.cpp  main.cpp
rmf_traffic/src/rmf_traffic/: DetectConflict.cpp
