<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_tasks</name>
  <version>1.0.0</version>
  <description>Package for managing and dispatching tasks using the Robotics Middleware Framework</description>
  <maintainer email="aaron@openrobotics.org">Aaron</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rmf_utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
